--- a/index.html
+++ b/index.html
@@ -1,37 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
-  <title>Frontend Mentor | Order summary card</title>
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
+  <title>Frontend Mentor | Order summary card | Tommy Trieu</title>
+  <link href="https://fonts.googleapis.com/css2?family=Red+Hat+Display:wght@500;700;900&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="main.css">
+
 </head>
+
 <body>
 
-  Order Summary
+  <div class="card">
+    <h1>Order Summary</h1>
 
-  You can now listen to millions of songs, audiobooks, and podcasts on any 
-  device anywhere you like!
+    <p class="plan-description">You can now listen to millions of songs, audiobooks, and podcasts on any
+      device anywhere you like!</p>
 
-  Annual Plan
-  $59.99/year
+    <div class="plan-choice">
+      Annual Plan
+      $59.99/year
 
-  Change
+      <a href="change-plan">Change</a>
+    </div>
 
-  Proceed to Payment
-  Cancel Order
-  
+    <a href="#" class="proceed-payment-button">Proceed to Payment</a>
+    <a href="#" class="cancel-order">Cancel Order</a>
+  </div>
+
   <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
+    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
+    Coded by <a href="https://github.com/t-rieu" target="_blank">Tommy Trieu</a>.
   </div>
 </body>
+
 </html>
