--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
     <div class="plan-choice">
       Annual Plan
       $59.99/year
+      <!--make the cost a span?-->
 
       <a href="change-plan">Change</a>
     </div>
