--- a/index.html
+++ b/index.html
@@ -23,11 +23,10 @@
       device anywhere you like!</p>
 
     <div class="plan-choice">
-      Annual Plan
-      $59.99/year
-      <!--make the cost a span?-->
+      <span class="plan-type">Annual Plan</span>
+      <span class="plan-price">$59.99/year</span>
 
-      <a href="change-plan">Change</a>
+      <a href="#" class="change-plan">Change</a>
     </div>
 
     <a href="#" class="proceed-payment-button">Proceed to Payment</a>
