--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
       device anywhere you like!</p>
 
     <div class="plan-choice">
-      <span class="plan-type">Annual Plan</span>
-      <span class="plan-price">$59.99/year</span>
+      <p class="plan-type">Annual Plan</p>
+      <p class="plan-price">$59.99/year</p>
 
       <a href="#" class="change-plan">Change</a>
     </div>
