--- a/index.html
+++ b/index.html
@@ -23,8 +23,10 @@
       device anywhere you like!</p>
 
     <div class="plan-choice">
-      <p class="plan-type">Annual Plan</p>
-      <p class="plan-price">$59.99/year</p>
+      <article>
+        <h2 class="plan-type">Annual Plan</h2>
+        <p class="plan-price">$59.99/year</p>
+      </article>
 
       <a href="#" class="change-plan">Change</a>
     </div>
